# function-visualizer

./: CMakeLists.txt
include/: function_executor.h  graphics.h  interface.h  window.h
src/: function_executor.cpp  graphics.cpp  interface.cpp  main.cpp  window.cpp
